--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   dynamic_color: ^1.7.0
   shared_preferences: ^2.3.0
+  velocity_x: ^4.1.2
 
 dev_dependencies:
   flutter_test:
