feat(audio): 实现音乐文件标签读取功能
- 添加文件选择器支持，允许用户选择音乐文件
- 集成音频标签读取库，支持多种音频格式
- 实现文件复制到缓存目录的逻辑
- 添加进度对话框和Toast提示用户体验
- 移除VelocityX库及相关示例代码
- 更新依赖配置，添加JNI库支持和存储权限
- 配置多平台插件注册，支持Android、iOS、Linux和Windows
- 完善主题切换功能，支持动态颜色和Material Design 3
- 添加批量编辑页面占位符界面
- 优化代码结构和注释，提升可维护性

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -42,4 +42,8 @@
             <data android:mimeType="text/plain"/>
         </intent>
     </queries>
+    
+    <!-- 添加权限以支持文件访问 -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 </manifest>
