--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   permission_handler: ^11.3.1
   intl: ^0.20.2
   file_selector: ^1.0.3
+  exif: ^3.3.0
+  flutter_exif_rotation: ^0.5.2
+  image: ^4.5.4
 
 
 dev_dependencies:
