--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   exif: ^3.3.0
   flutter_exif_rotation: ^0.5.2
   image: ^4.5.4
+  liquid_glass_renderer: ^0.1.1-dev.10
 
 
 dev_dependencies:
