--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_exif_rotation: ^0.5.2
   image: ^4.5.4
   liquid_glass_renderer: ^0.1.1-dev.10
+  http: ^1.6.0
 
 
 dev_dependencies:
