feat(ui): 添加桌面拖放功能并优化字体设置
- 集成 desktop_drop 插件实现文件拖拽支持
- 在主页添加 DropTarget 包装器以接收拖拽事件
- 实现 _processDroppedFiles 方法处理拖入的音频文件
- 添加对多种音频格式的支持（mp3, wav, flac等）
- 限制一次性最多处理100个文件
- 增加拖拽文件时的进度提示和错误处理
- 统一应用界面字体为 MapleMono 和 SourceHanSans
- 更新主题配置以使用 Material Design 3 和自定义字体
- 为 Windows 平台启用窗口拖拽文件功能
- 注册 desktop_drop 插件到各平台原生代码中
- 更新 pubspec.yaml 添加相关依赖和字体资源
- 修改代码结构以兼容新的文件处理逻辑

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,12 +42,14 @@ dependencies:
   permission_handler: ^11.3.1
   intl: ^0.20.2
   file_picker: ^8.1.0
+  cross_file: ^0.3.4
   exif: ^3.3.0
   flutter_exif_rotation: ^0.5.2
   image: ^4.5.4
   liquid_glass_renderer: ^0.1.1-dev.10
   http: ^1.6.0
   crypto: ^3.0.3
+  desktop_drop: ^0.7.0
 
 
 dev_dependencies:
@@ -102,3 +104,15 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+  # Custom fonts
+  fonts:
+    - family: SourceHanSans
+      fonts:
+        - asset: fonts/SourceHanSans-Medium.ttc
+    - family: MapleMono
+      fonts:
+        - asset: fonts/MapleMono-NF-CN-Regular.ttf
+    - family: MapleMono
+      fonts:
+        - asset: fonts/MapleMono-NF-CN-Regular.ttf
