chore(android): 更新应用包名为top.raincrat.audiotags
- 将android/app/build.gradle.kts中的namespace从aibeto.maple.audiotags更新为top.raincrat.audiotags
- 将android/app/build.gradle.kts中的applicationId从aibeto.maple.audiotags更新为top.raincrat.audiotags
- 将MainActivity.kt中的package声明从aibeto.maple.audiotags更新为top.raincrat.audiotags
- 更新MainActivity.kt中的CHANNEL常量值以匹配新的包名
- 删除旧的MainActivity.kt文件

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "maple_audiotags",
-    "short_name": "maple_audiotags",
+    "name": "raincrat_audiotags",
+    "short_name": "raincrat_audiotags",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
